# noc-iq-contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-hash.yml  security.yml
docs/: CODEX_CONTEXT.md  PROJECT_CONTEXT.md  config-validation.md  sc-w5-storage-and-cost-baselines.md
offchain/: configChangeDigest.ts  executionSloSignals.ts  outagePaymentEventFields.ts  txHashCorrelation.ts
scripts/: check-dep-policy.ts  check-wasm-size.ts  migration-dry-run.ts  pruning-throughput.ts  run-tests.ts  throughput-stress.ts  validate-roadmap.ts
sla_calculator/: Cargo.toml
sla_calculator/src/: auth_matrix_tests.rs  event_state_tests.rs  lib.rs  pruning_perf.rs  severity_enum.rs  symbol_constants.rs  tests.rs
tests/: configFreezeLifecycle.test.ts  governanceAuditCompleteness.test.ts  historyQueryBenchmarks.test.ts  inputConstraints.test.ts  outageIdFormatParity.test.ts  reEntrancyThreatModel.test.ts
tooling/: adminRotationAudit.ts  fuzzCiIntegration.ts  governanceChangelogGen.ts  governanceReplayDetection.ts  moduleMap.ts  releaseChecklist.ts  rollbackDecisionMatrix.ts  versionCompatMatrix.ts
tools/: gen-roadmap.ts  normalize-snapshots.ts
ts/: configVersionRegistry.ts  dashboardAggregateOptimizer.ts  governanceQuorumHooks.ts  historyFormatVersionTag.ts
